<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_locator_home">

    <fragment
        android:id="@+id/navigation_locator_home"
        android:name="dk.seahawk.jidgrid.ui.locator.LocatorFragment"
        android:label="@string/title_locator_home"
        tools:layout="@layout/fragment_locator" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="dk.seahawk.jidgrid.ui.maps.MapsFragment"
        android:label="@string/title_maps"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="dk.seahawk.jidgrid.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

</navigation>